# claude-chatbot11

./: .gitignore  .replit  CLAUDE_OPUS_4_1_UPGRADE.md  CODE_REVIEW_SUMMARY.md  DEPLOYMENT_FIXES.md  IMPROVEMENTS_SUMMARY.txt  META_ARIA_SUMMARY.md  PROJECT_STATUS.md  README.md  README_DREAMER.md  README_REPLIT.md  REPLIT_BACKEND_CODE.txt  REPLIT_COMPLETE_CODE.txt  REPLIT_FRONTEND_CODE.txt  REPLIT_SETUP.md  REPLIT_SETUP_GUIDE.md  REPLIT_SETUP_GUIDE.txt  SECURITY_SETUP.md  STREAMING_SETUP.md  TESTING_SUMMARY.txt  TEST_FILES_SUMMARY.txt  TEST_REPORT.md  TYPESCRIPT_MIGRATION_SUMMARY.txt  dreamer_v3_improved.py  dreamer_v3_multimodal.py  env.example  main_replit.py  pyproject.toml  requirements.txt  requirements_dreamer.txt  run_dreamer.py  run_replit.sh  test_claude_api.py  test_compatibility.py  test_opus_4_1.py  test_replit_setup.py
archive/: README.md
backend/: .replit  META_ARIA_README.md  ai_persona_system.py  check_install.py  connection_manager.py  context_manager.py  database_manager.py  env_example.txt  env_replit.txt  find_python.py  install_dependencies.bat  llm_analyzer.py  local_storage.json  main.py  main_replit.py  main_replit_improved.py  meta_aria_integration.py  meta_aria_persona.py  meta_aria_persona_minimal.py  meta_aria_persona_simple.py  python_path_info.txt  requirements_improved.txt  requirements_replit.txt  simple_test.py  simple_test_simple.py  stream_transformers.py  test_anthropic_guardrails.py  test_aria_working.py  test_meta_aria.py  test_minimal.py  test_persona_system.py  test_replit_database.py  test_stream_transformers.py
(+60 files in other folders)
